item saved to db

--- a/Medium-Clone/views/new_article.ejs
+++ b/Medium-Clone/views/new_article.ejs
@@ -7,12 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <form>
-        <label for="name-input">Title
-        </label>
-        <input type="text" name="name-input">
+    <form method = "post" action="/saved">
+        <label for="name-input">Title</label>
+        <input type="text" name="Title">
         <label for="Description">Description</label>
-        <input type="text" name = "description">
+        <input type="text" name = "Description">
         <label for="Markdown">Markdown</label>
         <textarea name="Markdown" id="" cols="30" rows="10"></textarea>
         <button>Add new Article</button>
