--- a/Medium-Clone/views/index.ejs
+++ b/Medium-Clone/views/index.ejs
@@ -14,6 +14,14 @@
     <form action="/new" method="get">
         <button>Add new Article</button>
     </form>
+    <ul class="main" id = "main">
+        <% for(const item in items) {  %> 
+        <li><h1><%= item.Title %> </h1></li>
+        <li><h2><%= item.Description %> </h2></li>
+        <li><h3><%= item.Markdown %> </h3></li>
+         <% } %>
+         <br>
+        </ul>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
