--- a/Medium-Clone/views/index.ejs
+++ b/Medium-Clone/views/index.ejs
@@ -16,7 +16,7 @@
     </form>
     <ul class="main" id = "main">
         <% for(const item in items) {  %> 
-        <li><h1><%= item.Title %> </h1></li>
+        <li><h1><%= console.log(item.Title) %> </h1></li>
         <li><h2><%= item.Description %> </h2></li>
         <li><h3><%= item.Markdown %> </h3></li>
          <% } %>
